Modify/update route to reflect controller changesUpdate and improve OpenApi annotations
